@@ -8,8 +8,7 @@
 
 package org.nqcx.doox.commons.util.security;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import org.apache.commons.codec.binary.Base64;
 
 import javax.crypto.Cipher;
 import javax.crypto.SecretKey;
@@ -74,7 +73,7 @@ public class DESCoder {
      * @throws IOException
      */
     public static byte[] decryptBASE64(String key) throws IOException {
-        return (new BASE64Decoder()).decodeBuffer(key);
+        return Base64.decodeBase64(key);
     }
 
     /**
@@ -85,7 +84,7 @@ public class DESCoder {
      * @throws Exception
      */
     public static String encryptBASE64(byte[] key) {
-        return (new BASE64Encoder()).encodeBuffer(key);
+        return Base64.encodeBase64String(key);
     }
 
     private static Key getKey(String key) {
